@@ -2,6 +2,7 @@ package org.refactor.common;
 
 import org.refactor.util.FileUtils;
 
+import java.io.File;
 import java.net.MalformedURLException;
 import java.net.URL;
 import java.net.URLClassLoader;
@@ -18,7 +19,7 @@ public class DatasetConst {
         try {
             List<URL> urlList = new ArrayList<>();
             for (String jar : FileUtils.getAllJarFiles(MAVEN_REPO, ROOT)) {
-                urlList.add(new URL("file:///" + jar));
+                urlList.add(new File(jar).toURI().toURL());
             }
 
             urlCL = URLClassLoader.newInstance(urlList.toArray(new URL[0]));
